update first batch of arXiv papers

--- a/i_team.html
+++ b/i_team.html
@@ -80,24 +80,15 @@
 
 
 
+
                 Gasanov</a> (9/2018-present)</li>
-            <li><a
-                href="https://www.researchgate.net/profile/Dmitry_Kovalev8">Dmitry
-
-
-
-
-
-
-
-
-
-
-                Kovalev</a> (9/2018-present)</li>
+            <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>
+              (9/2018-present)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>
               (8/2017-12/2018)</li>
             <li><a
                 href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek
+
 
 
 
@@ -137,10 +128,12 @@
 
 
 
+
                 Sokolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
 
 
 
@@ -169,10 +162,12 @@
 
 
 
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -198,6 +193,7 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
@@ -213,10 +209,12 @@
 
 
 
+
                 Gasanov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018 </li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
 
 
 
@@ -250,6 +248,7 @@
 
 
 
+
                 Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
@@ -257,6 +256,7 @@
             <li>Dmitry Kamzolov (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a href="https://perso.telecom-paristech.fr/rgower/">Robert
+
 
 
 
@@ -290,11 +290,13 @@
 
 
 
+
                 Möllenhoff</a> (Munich), 8/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 1/2018-3/2018</li>
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias
+
 
 
 
@@ -335,9 +337,11 @@
 
 
 
+
                 Gower</a> (Télécom ParisTech), 10/2017<br>
             </li>
             <li><a href="https://www.hse.ru/en/staff/nikitadoikov">Nikita
+
 
 
 
@@ -370,6 +374,7 @@
                 Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a
 href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCHENKO">Dmitriy
+
 
 
 
@@ -427,6 +432,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -453,6 +459,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -460,6 +467,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -503,6 +511,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -512,6 +521,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -563,6 +573,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>present)</li>
             <li>current position: PhD student @ Edinburgh</li>
@@ -570,6 +581,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -607,6 +619,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.maths.ed.ac.uk/people/show?person=417">Dominik
+
 
 
 
@@ -679,6 +692,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Luo</a> (9/2012<span class="style1" style="width:
                 300px;">–</span>2/2013)</li>
             <li>visiting PhD student from Tsinghua University,
@@ -709,9 +723,11 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
 
 
 
@@ -767,12 +783,14 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li>Alexander Banks-Watson (2012), 1st position: <a
                 href="http://www.quintiq.com/">Quintiq</a> (Netherlands)</li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
 
 
 
@@ -833,8 +851,10 @@ href="https://www2.warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/pene
 
 
 
+
                 student at Warwick</a> </li>
             <li><a href="http://www.uclouvain.be/bartosz.filipecki">Bartosz
+
 
 
 
@@ -878,9 +898,11 @@ D.
 
 
 
+
                 Ahipasaoglu</a> (LSE / SUTD)</li>
             <li><a
                 href="https://www.math.uzh.ch/index.php?id=1821&amp;L=1&amp;key1=4980">Michel
+
 
 
 
@@ -917,8 +939,10 @@ D.
 
 
 
+
                 Bergou</a> (INRA)</li>
             <li><a href="https://sites.google.com/site/armineftekhari/">Armin
+
 
 
 
@@ -955,8 +979,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -998,8 +1024,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -1020,6 +1048,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -1060,9 +1089,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
