--- a/i_team.html
+++ b/i_team.html
@@ -81,6 +81,7 @@
 
 
 
+
                 Gasanov</a> (9/2018-present)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>
               (9/2018-present)</li>
@@ -88,6 +89,7 @@
               (8/2017-12/2018)</li>
             <li><a
                 href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek
+
 
 
 
@@ -129,10 +131,12 @@
 
 
 
+
                 Sokolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
 
 
 
@@ -163,10 +167,12 @@
 
 
 
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -194,6 +200,7 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
@@ -210,10 +217,12 @@
 
 
 
+
                 Gasanov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018 </li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
 
 
 
@@ -249,35 +258,19 @@
 
 
 
+
                 Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 4/2019-5/2019</li>
             <li>Dmitry Kamzolov (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
-            <li><a href="https://perso.telecom-paristech.fr/rgower/">Robert
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Gower</a> (Télécom ParisTech), 12/2018</li>
+            <li><a href="https://gowerrobert.github.io/">Robert Gower</a>
+              (Télécom ParisTech), 12/2018</li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
               10-11/2018</li>
             <li><a href="https://vision.in.tum.de/members/moellenh">Thomas
+
 
 
 
@@ -314,33 +307,17 @@
 
 
 
+
                 Ehrhardt</a> (University of Cambridge), 1/2018-2/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 10/2017-11/2017<br>
             </li>
-            <li><a href="https://perso.telecom-paristech.fr/rgower/">Robert
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Gower</a> (Télécom ParisTech), 10/2017<br>
+            <li><a href="https://gowerrobert.github.io/">Robert Gower</a>
+              (Télécom ParisTech), 10/2017<br>
             </li>
             <li><a href="https://www.hse.ru/en/staff/nikitadoikov">Nikita
+
 
 
 
@@ -374,6 +351,7 @@
                 Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a
 href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCHENKO">Dmitriy
+
 
 
 
@@ -433,6 +411,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -460,6 +439,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -467,6 +447,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -512,6 +493,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -521,6 +503,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -574,6 +557,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>present)</li>
             <li>current position: PhD student @ Edinburgh</li>
@@ -581,6 +565,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -619,6 +604,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.maths.ed.ac.uk/people/show?person=417">Dominik
+
 
 
 
@@ -693,6 +679,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Luo</a> (9/2012<span class="style1" style="width:
                 300px;">–</span>2/2013)</li>
             <li>visiting PhD student from Tsinghua University,
@@ -724,9 +711,11 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
 
 
 
@@ -784,12 +773,14 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li>Alexander Banks-Watson (2012), 1st position: <a
                 href="http://www.quintiq.com/">Quintiq</a> (Netherlands)</li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
 
 
 
@@ -830,11 +821,13 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             <li> Miro Psota (2016-2017, Comenius University)</li>
             <li>Sean Ryan (2015-2016, Edinburgh Mathematics) -
               Stochastic methods for solving large linear systems</li>
-            <li>Mojmír Mutný (2015, Edinburgh Physics), now: PhD student
-              at ETH Zurich&nbsp;</li>
+            <li><a href="https://mojmirmutny.weebly.com/">Mojmír Mutný</a>
+              (2015, Edinburgh Physics), now: PhD student at ETH
+              Zurich&nbsp;</li>
             <li>Debadri Mukherjee (2014, Edinburgh Informatics), now:
               analyst &amp; JP Morgan Chase &amp; Co</li>
-            <li>Mojmír Mutný (2014, Edinburgh Physics) [<a
+            <li><a href="https://mojmirmutny.weebly.com/">Mojmír Mutný</a>
+              (2014, Edinburgh Physics) [<a
                 href="https://bitbucket.org/Mojusko/biglearning/src">code</a>]<br>
             </li>
             <li>Iliana Peneva (2012, Edinburgh Mathematics), now: <a
@@ -852,8 +845,10 @@ href="https://www2.warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/pene
 
 
 
+
                 student at Warwick</a> </li>
             <li><a href="http://www.uclouvain.be/bartosz.filipecki">Bartosz
+
 
 
 
@@ -899,9 +894,11 @@ D.
 
 
 
+
                 Ahipasaoglu</a> (LSE / SUTD)</li>
             <li><a
                 href="https://www.math.uzh.ch/index.php?id=1821&amp;L=1&amp;key1=4980">Michel
+
 
 
 
@@ -940,8 +937,10 @@ D.
 
 
 
+
                 Bergou</a> (INRA)</li>
             <li><a href="https://sites.google.com/site/armineftekhari/">Armin
+
 
 
 
@@ -980,8 +979,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -1025,8 +1026,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -1048,6 +1051,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -1090,9 +1094,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
