--- a/i_papers.html
+++ b/i_papers.html
@@ -195,8 +195,8 @@
 
             of the 36th International Conference on Machine Learning,
             PMLR 97:5200-5209, 2019</a><br>
-          [<a href="https://arxiv.org/abs/1901.09401">arXiv</a>] [code:
-          SGD-AS]<br>
+          [<a href="https://arxiv.org/abs/1901.09401">arXiv</a>] [<a
+            href="posters/Poster-SGD_AS.pdf">poster</a>] [code: SGD-AS]<br>
           <br>
           [88] Dmitry Kovalev, Samuel Horváth and Peter Richtárik<br>
           <b>Don’t jump through hoops and remove those loops: SVRG and
@@ -220,8 +220,9 @@
 
             of the 36th International Conference on Machine Learning,
             PMLR 97:5190-5199, 2019</a><br>
-          [<a href="https://arxiv.org/abs/1901.08669">arXiv</a>] [code:
-          <a href="https://github.com/QIANXunK/Code_SAGA_AS">SAGA-AS</a>]<br>
+          [<a href="https://arxiv.org/abs/1901.08669">arXiv</a>] [<a
+            href="posters/Poster-SAGA_AS.pdf">poster</a>] [code: <a
+            href="https://github.com/QIANXunK/Code_SAGA_AS">SAGA-AS</a>]<br>
           <br>
           <h2> Prepared in 2018</h2>
           [86] Lam M. Nguyen, Phuong Ha Nguyen, P. Richtárik, Katya
