--- a/i_team.html
+++ b/i_team.html
@@ -49,7 +49,7 @@
               (1/2018<span class="style1" style="width: 300px;">-</span>1/2019)<br>
             </li>
             <li><a href="https://aritradutta.weebly.com">Aritra Dutta</a>
-              (5/2017<span class="style1" style="width: 300px;">-present</span>)</li>
+              (5/2017<span class="style1" style="width: 300px;">-5/2019</span>)</li>
           </ul>
           <h2>PhD Students<br>
           </h2>
@@ -69,6 +69,7 @@
           </h2>
           <ul>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -108,12 +109,15 @@
 
 
 
+
                 Sailanbayev</a> (8/2017-12/2018)<br>
             </li>
           </ul>
           <h2> Research Interns<br>
           </h2>
           <ul>
+            <li><a href="https://github.com/rka97">Ahmed Khaled Ragab</a>
+              (Cairo University), 6/2019-present</li>
             <li><a href="https://github.com/Selim78">Sélim Chraibi</a>
               (Grenoble, Rhône-Alpes), 4/2019-present<br>
             </li>
@@ -121,6 +125,7 @@
             </li>
             <li><a
                 href="https://www.researchgate.net/profile/Igor_Sokolov14">Igor
+
 
 
 
@@ -153,6 +158,7 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
@@ -168,10 +174,12 @@
 
 
 
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -201,10 +209,12 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -239,12 +249,16 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018</li>
-            <li>Slavomír Hanzely (Comenius University), 1/2018-2/2018<br>
+            <li><a
+                href="https://www.imo-official.org/participant_r.aspx?id=26648">Slavomír
+                Hanzely</a> (Comenius University), 1/2018-2/2018<br>
             </li>
             <li>Aashutosh Tiwari (IIT Kanpur), 5/2017-7/2017</li>
-            <li>Atal Sahu (IIT Kanpur), 5/2017-7/2017<br>
+            <li>Atal Sahu (IIT Kanpur), 5/2017-7/2017, now: <a
+                href="https://mcanini.github.io/">PhD student at KAUST</a><br>
             </li>
           </ul>
           <h2>Visitors<br>
@@ -254,6 +268,7 @@
                 Bresson</a> (NTU Singapore), 4/2019<br>
             </li>
             <li><a href="https://www.hse.ru/en/org/persons/219293044">Alexey
+
 
 
 
@@ -284,11 +299,13 @@
 
 
 
+
                 Möllenhoff</a> (Munich), 8/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 1/2018-3/2018</li>
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias
+
 
 
 
@@ -336,6 +353,7 @@
 
 
 
+
                 Doikov</a> (HSE Moscow), 10/2017-11/2017<br>
             </li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
@@ -351,6 +369,7 @@
                 Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a
 href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCHENKO">Dmitriy
+
 
 
 
@@ -412,6 +431,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -440,6 +460,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -447,6 +468,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -494,6 +516,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -503,6 +526,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -558,6 +582,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>present)</li>
             <li>current position: PhD student @ Edinburgh</li>
@@ -565,6 +590,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -604,6 +630,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.maths.ed.ac.uk/people/show?person=417">Dominik
+
 
 
 
@@ -680,6 +707,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Luo</a> (9/2012<span class="style1" style="width:
                 300px;">–</span>2/2013)</li>
             <li>visiting PhD student from Tsinghua University,
@@ -712,9 +740,11 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
 
 
 
@@ -774,12 +804,14 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li>Alexander Banks-Watson (2012), 1st position: <a
                 href="http://www.quintiq.com/">Quintiq</a> (Netherlands)</li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
 
 
 
@@ -822,7 +854,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             <li>Sean Ryan (2015-2016, Edinburgh Mathematics) -
               Stochastic methods for solving large linear systems</li>
             <li><a href="https://mojmirmutny.weebly.com/">Mojmír Mutný</a>
-              (2015, Edinburgh Physics), now: PhD student at ETH
+              (2015, Edinburgh Physics), now: PhD student @ ETH
               Zurich&nbsp;</li>
             <li>Debadri Mukherjee (2014, Edinburgh Informatics), now:
               analyst &amp; JP Morgan Chase &amp; Co</li>
@@ -830,23 +862,9 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
               (2014, Edinburgh Physics) [<a
                 href="https://bitbucket.org/Mojusko/biglearning/src">code</a>]<br>
             </li>
-            <li>Iliana Peneva (2012, Edinburgh Mathematics), now: <a
-href="https://www2.warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">PhD
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                student at Warwick</a> </li>
+            <li><a
+href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">Iliana
+                Peneva</a> (2012, Edinburgh Mathematics), now: Oxford </li>
             <li><a href="http://www.uclouvain.be/bartosz.filipecki">Bartosz
 
 
@@ -863,11 +881,15 @@ href="https://www2.warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/pene
 
 
 
+
                 Filipecki</a> (2011, Edinburgh Mathematics), now: <a
-                href="http://www.uclouvain.be/en-core.html">PhD student
-                at CORE</a>, Catholic University of Louvain</li>
-            <li>Edward Cumberlege (2011, Edinburgh Mathematics), now:
-              Associate @ Sagamore Invest. Management&nbsp;</li>
+                href="https://de.linkedin.com/in/bartosz-filipecki-24923a85">postdoc
+                @ Chemnitz</a><br>
+            </li>
+            <li>Edward Cumberlege (2011, Edinburgh Mathematics), now: <a
+href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=264554286&amp;privcapId=214118497&amp;previousCapId=214118497&amp;previousTitle=Sagamore%20Investments">Director
+                @ Sagamore Investments </a><br>
+            </li>
             <li>Bartosz Filipecki (2010, Edinburgh Mathematics)<br>
             </li>
           </ul>
@@ -876,6 +898,7 @@ href="https://www2.warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/pene
             <li><a
                 href="http://esd.sutd.edu.sg/faculty/selin-damla-ahipasaoglu/">Selin
 D.
+
 
 
 
@@ -917,8 +940,10 @@ D.
 
 
 
+
                 Baes</a> (University of Zurich)</li>
             <li><a href="http://maiage.jouy.inra.fr/?q=fr/bergou">Elhoucine
+
 
 
 
@@ -959,6 +984,7 @@ D.
 
 
 
+
                 Eftekhari</a> (The Alan Turing Institute)</li>
             <li><a href="http://www.damtp.cam.ac.uk/people/me404/">Matthias
 
@@ -980,8 +1006,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -1027,8 +1055,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -1051,6 +1081,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -1095,9 +1126,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
