--- a/i_team.html
+++ b/i_team.html
@@ -83,6 +83,7 @@
 
 
 
+
                 Gasanov</a> (9/2018-present)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>
               (9/2018-present)</li>
@@ -90,6 +91,7 @@
               (8/2017-12/2018)</li>
             <li><a
                 href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek
+
 
 
 
@@ -137,6 +139,7 @@
 
 
 
+
                 Sokolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
@@ -159,10 +162,13 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
-              Technology), 1/2019-2/2019</li>
+              Technology), 1/2019-2/2019<br>
+            </li>
             <li><a
                 href="https://www.researchgate.net/profile/Vladislav_Elsukov">Vladislav
+
 
 
 
@@ -179,6 +185,7 @@
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -210,10 +217,12 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -250,15 +259,17 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018</li>
             <li><a
                 href="https://www.imo-official.org/participant_r.aspx?id=26648">Slavomír
+
                 Hanzely</a> (Comenius University), 1/2018-2/2018<br>
             </li>
             <li>Aashutosh Tiwari (IIT Kanpur), 5/2017-7/2017</li>
             <li>Atal Sahu (IIT Kanpur), 5/2017-7/2017, now: <a
-                href="https://mcanini.github.io/">PhD student at KAUST</a><br>
+                href="https://mcanini.github.io/">PhD student @ KAUST</a><br>
             </li>
           </ul>
           <h2>Visitors<br>
@@ -274,11 +285,14 @@
 
 
 
+
                 Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 4/2019-5/2019</li>
-            <li>Dmitry Kamzolov (Moscow Institute of Physics and
+            <li><a
+                href="https://www.researchgate.net/profile/Dmitry_Kamzolov">Dmitry
+                Kamzolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a href="https://gowerrobert.github.io/">Robert Gower</a>
               (Télécom ParisTech), 12/2018</li>
@@ -300,11 +314,13 @@
 
 
 
+
                 Möllenhoff</a> (Munich), 8/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 1/2018-3/2018</li>
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias
+
 
 
 
@@ -354,6 +370,7 @@
 
 
 
+
                 Doikov</a> (HSE Moscow), 10/2017-11/2017<br>
             </li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
@@ -369,6 +386,7 @@
                 Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a
 href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCHENKO">Dmitriy
+
 
 
 
@@ -432,6 +450,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -461,6 +480,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -468,6 +488,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -517,6 +538,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -526,6 +548,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -583,6 +606,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>present)</li>
             <li>current position: PhD student @ Edinburgh</li>
@@ -590,6 +614,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -630,6 +655,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.maths.ed.ac.uk/people/show?person=417">Dominik
+
 
 
 
@@ -708,6 +734,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Luo</a> (9/2012<span class="style1" style="width:
                 300px;">–</span>2/2013)</li>
             <li>visiting PhD student from Tsinghua University,
@@ -741,9 +768,11 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
 
 
 
@@ -805,12 +834,14 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li>Alexander Banks-Watson (2012), 1st position: <a
                 href="http://www.quintiq.com/">Quintiq</a> (Netherlands)</li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
 
 
 
@@ -864,6 +895,7 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
             </li>
             <li><a
 href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">Iliana
+
                 Peneva</a> (2012, Edinburgh Mathematics), now: Oxford </li>
             <li><a href="http://www.uclouvain.be/bartosz.filipecki">Bartosz
 
@@ -882,12 +914,15 @@ href="https://warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/peneva/">
 
 
 
+
                 Filipecki</a> (2011, Edinburgh Mathematics), now: <a
                 href="https://de.linkedin.com/in/bartosz-filipecki-24923a85">postdoc
+
                 @ Chemnitz</a><br>
             </li>
             <li>Edward Cumberlege (2011, Edinburgh Mathematics), now: <a
 href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=264554286&amp;privcapId=214118497&amp;previousCapId=214118497&amp;previousTitle=Sagamore%20Investments">Director
+
                 @ Sagamore Investments </a><br>
             </li>
             <li>Bartosz Filipecki (2010, Edinburgh Mathematics)<br>
@@ -898,6 +933,7 @@ href="https://www.bloomberg.com/research/stocks/private/person.asp?personId=2645
             <li><a
                 href="http://esd.sutd.edu.sg/faculty/selin-damla-ahipasaoglu/">Selin
 D.
+
 
 
 
@@ -941,8 +977,10 @@ D.
 
 
 
+
                 Baes</a> (University of Zurich)</li>
             <li><a href="http://maiage.jouy.inra.fr/?q=fr/bergou">Elhoucine
+
 
 
 
@@ -985,6 +1023,7 @@ D.
 
 
 
+
                 Eftekhari</a> (The Alan Turing Institute)</li>
             <li><a href="http://www.damtp.cam.ac.uk/people/me404/">Matthias
 
@@ -1007,8 +1046,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -1056,8 +1097,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -1081,6 +1124,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -1127,9 +1171,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
