--- a/i_team.html
+++ b/i_team.html
@@ -609,6 +609,9 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>present)</li>
+            <li>thesis: Randomized iterative methods for linear systems:
+              momentum, inexactness and gossip<br>
+            </li>
             <li>current position: PhD student @ Edinburgh</li>
           </ul>
           <ul>
@@ -690,8 +693,8 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
                   class="style1" style="width: 300px;">–6/2017</span></span>)</li>
             <li>thesis: Stochastic, distributed and federated
               optimization for machine learning</li>
-            <li>current position: Research Scientist, Google, Seattle,
-              USA<br>
+            <li>current position: Research Scientist, Google, Beijing,
+              China<br>
             </li>
           </ul>
           <ul>
